--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -713,7 +713,7 @@
   width: 80%;
   max-width: 650px;
 }
-#cliqz-results .cinema-showtimes-container { height: 139px; }
+#cliqz-results .cinema-showtimes-container { height: 145px; }
 
 #cliqz-results .cinema-showtimes-table {
     table-layout: fixed;
@@ -737,15 +737,20 @@
 }
 #cliqz-results  .cinema-showtimes-table .cinema-name-td {
     max-width: 200px;
+    padding-left: 0;
     padding-right: 35px;
 }
 
 #cliqz-results  .cinema-showtimes-table .showtimes-date {
+    padding-left: 0;
     padding-bottom: 10px;
-    text-align: right;
+    text-align: left;
     color: #CECECE;
     font-weight: normal;
+    font-size: 16px;
 }
+
+#cliqz-results  .cinema-showtimes-table span.cinema-showtime  { color: #999; font-size: 14px; }
 
 #cliqz-results .cinema-name {
     font-size: 16px;
