DD-42 Seting up template for Cinemas

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -19,7 +19,7 @@
     background-size: 14px 10px;
     color: white;
     background-color: grey;
-    margin: 0px;
+    margin: 0;
     padding: 2px 6px 2px 6px;
     margin-right: 3px;
     border-radius: 1px;
