--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -328,7 +328,7 @@
     padding-left: 19px;
     color: #49c0f4;
     vertical-align: top;
-    background: url('chrome://cliqzres/content/skin/images/social media/twitter-bird.svg') no-repeat 0 3px;
+     background: url('https://cdn.cliqz.com/extension/EZ/news/twitter-bird.svg') no-repeat 0 3px;
 }
 
 /* ez video specials */
