View Layer v1.0: Support for the Movies & Cinema SmartCliqz

--- a/generic/static/skin/browser_progress.css
+++ b/generic/static/skin/browser_progress.css
@@ -878,6 +878,7 @@
 }
 
 #cliqz-results .loc_permission_prompt_buttons>span#cqz_location_yes,
+#cliqz-results .loc_permission_prompt_buttons>span#cqz_location_yes_confirm,
 #cliqz-results .loc_permission_prompt_buttons>span.cqz_location_once {
   border: none;
   height: 18px;
