--- a/generic/static/skin/browser.css
+++ b/generic/static/skin/browser.css
@@ -441,7 +441,7 @@
 }
 
 /* ez calculator (time etc) */
-#cliqz-results .ez-calculator .answer { font-size: 48px; margin-top: -9px; }
+#cliqz-results .ez-calculator .answer { font-size: 48px; margin-top: -9px; line-height: 1.2em;}
 #cliqz-results .ez-calculator .expression { margin: 14px 0 2px; color: #999999 }
 #cliqz-results .ez-calculator .message { color: #cccccc; font-size: 14px; margin-left: 17px; }
 
