--- a/generic/static/styles/sass/__general.scss
+++ b/generic/static/styles/sass/__general.scss
@@ -992,6 +992,7 @@
     margin-left: -5px;
     white-space: normal;
     line-height: 1.4em;
+    margin-bottom: 0;
 }
 
 .cqz-results .cqz-multy-lines-ellipses:after {
