EntityLocal template WIP

--- a/generic/static/styles/sass/extension.scss
+++ b/generic/static/styles/sass/extension.scss
@@ -18,6 +18,7 @@
     @import 'ezones/_ramadan';
     @import 'ezones/_stocks';
     @import 'ezones/_weather';
-
+    @import 'ezones/_local';
+    
     @import 'parts/_footer-msg';
 }
