--- a/generic/static/styles/sass/ezones/_news.scss
+++ b/generic/static/styles/sass/ezones/_news.scss
@@ -22,18 +22,23 @@
     float: left;
     width: 100px;
     height: 60px;
-    background: #ddd center center;
-    background-size: cover;
-}
+    border-radius: $general-border-radius;
+    background: #ddd url("http://cdn.cliqz.com/extension/EZ/news/no-image.svg") no-repeat 50% 50%;
+    background-size: 80% 80%;
 
-.entity-story-image span {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: black;
-    color: white;
-    font-size: 12px;
-    padding: 5px;
+    .cqz-img-holder {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: $general-border-radius;
+        background-position: center center;
+        background-size: cover;
+    }
+
 }
 
 .entity-story-image + .entity-story-description {
@@ -76,7 +81,7 @@
     padding-left: 19px;
     color: #49c0f4;
     vertical-align: top;
-    background: url('https://cdn.cliqz.com/extension/EZ/news/twitter-bird.svg') no-repeat 0 3px;
+    background: url("https://cdn.cliqz.com/extension/EZ/news/twitter-bird.svg") no-repeat 0 3px;
 }
 
 /* ez video specials */
