MIS-183 wiki result css fix

--- a/generic/static/styles/sass/__general.scss
+++ b/generic/static/styles/sass/__general.scss
@@ -48,7 +48,8 @@
     text-overflow: ellipsis;
 }
 
-.cqz-popup .cqz-one-line {
+.cqz-popup .cqz-one-line,
+.cqz-popup .cqz-celeb-desc {
     @extend .cqz-ellipsis;
 }
 
