--- a/specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/partials/views/index.html
+++ b/specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/partials/views/index.html
@@ -31,7 +31,7 @@
 
     <div class="cqz-loyalty-container">
         {{#each msg_all}}
-        <div class="notifications {{msg_class @index}}">
+        <div class="notifications">
             <div class="notify_content">
               <div class="notify_icon clz_float_left"><img src="images/{{this.icon}}" /> </div>
               <div class="notify_msg clz_float_left">
