--- a/specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/partials/views/results-usage.html
+++ b/specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/partials/views/results-usage.html
@@ -48,7 +48,7 @@
             </div>
             <div class="optin-cta-con">
               <div class="cqz-optin-btn"
-                   onclick="clz_activate_humanweb_close_optin('clz_usage_meter_HumanWeb_Optin_lockscreen')">Join
+                   onclick="clzActivateHumanwebCloseOptin('clz_usage_meter_HumanWeb_Optin_lockscreen')">Join
                 HumanWeb
               </div>
             </div>
@@ -62,7 +62,7 @@
             <svg id="cliqz-use-meter_rootSVG"></svg>
           </div>
           <div class="clz_float_left clz_total_use_meter_body">
-            {{#if meter_total_use.break_best_record}}
+            {{#if meterTotalUse.break_best_record}}
             <div class="clz_congrate_box">
               <div class="clz_congrate_box_title">NEUER REKORD!</div>
               <div><b>Glückwunsch!!</b></div>
