remove format_str() helper for loyalty

--- a/specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/partials/views/status_info.html
+++ b/specific/firefox/cliqz@cliqz.com/chrome/content/loyalty/partials/views/status_info.html
@@ -22,7 +22,7 @@
                     {{#if icon.url}}
                         <div class="icon"><img src="{{icon.url}}"></div>
                     {{/if}}
-                    <div class="todo">{{format_str do bench_mark}}</div>
+                    <div class="todo">{{do}}</div>
                     <div class="des_title">Was du bekommst:</div>
                     <div class="des mem-status-{{@index}}">{{des}}</div>
                 </div>
